--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 </head>
 <body>
     <!-- Banner Section -->
-     <section class="grid grid-cols-2 container border border-red-500 mx-auto">
-        <div class="banner-left space-y-[30px]">
+     <section class="grid grid-cols-1 md:grid-cols-2 container  mx-auto">
+        <div class="banner-left space-y-[30px] ">
             <h2 class="text-[80px] font-bold">It's good <br>
                 tea time at The <br>
                 Tea House</h2>
@@ -39,8 +39,17 @@
                         <span class="-rotate-45 inline-block"><i class="fa-solid fa-arrow-right"></i></span>
                     </button>
         </div>
-        <div class="banner-right">
+        <div class="banner-right flex justify-end items-end relative">
             <img src="./images/banner.png" alt="">
+            <!-- Rating -->
+             <div class="bg-white rounded-xl shadow-2xl flex justify-center gap-2 items-center w-[250px] 
+             absolute bottom-[15px] left-[220px] py-[25px] px-[15px]">
+                <img src="./images/rate.png" alt="">
+                <div>
+                    <h2 class="font-bold text-2xl">5.00</h2>
+                    <p>Trust Pilot Ratings</p>
+                </div>
+             </div>
         </div>
      </section>
 </body>
